fix action-tmate sudo

--- a/.github/workflows/build-Lean's-LEDE.yml
+++ b/.github/workflows/build-Lean's-LEDE.yml
@@ -107,7 +107,7 @@ jobs:
       if: inputs.ssh == true
       with:
         detached: false
-        sudo: false
+        sudo: true
         limit-access-to-actor: true
 
     - name: Download package
