--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -111,7 +111,7 @@ jobs:
         if: inputs.ssh == true
         with:
           detached: false
-          sudo: false
+          sudo: true
           limit-access-to-actor: true
 
       - name: Download package
