Fix permissions and improve ngrok.yml

--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -41,6 +41,9 @@ on:
         type: boolean
         default: false
 
+permissions:
+  contents: write
+  discussions: write
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt
