--- a/.github/workflows/build-Lean's-LEDE.yml
+++ b/.github/workflows/build-Lean's-LEDE.yml
@@ -37,6 +37,9 @@ on:
         type: boolean
         default: false
 
+permissions:
+  contents: write
+  discussions: write
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
