--- a/.github/workflows/ngrok.yml
+++ b/.github/workflows/ngrok.yml
@@ -25,6 +25,7 @@ jobs:
         echo "### Update user: $USER password ###"
         echo -e "${{ secrets.USER_PASS }}\n${{ secrets.USER_PASS }}" | sudo passwd "$USER"
         chmod og-rw ~
+        echo "Go to https://dashboard.ngrok.com/"
 
     - name: ngrok open TCP p22 (1/3)
       run: sudo ngrok tcp 22 --authtoken ${{ secrets.NGROK_TOKEN }}
